--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -1,8 +1,8 @@
 <div ng-cloak ng-init="ctrl.init()">
   <div layout-gt-sm="row" layout="column" layout-align="start start">
 
-    
-    <md-card flex-gt-sm="50" flex>
+
+    <md-card flex="50">
 
       <md-card-title>
         <md-card-title-text>
@@ -14,42 +14,48 @@
       </md-card-title>
 
       <md-card-content layout="column" layout-align="start">
+        <form name="Form">
 
-        <div layout="row" layout-align="start space-around" ng-cloak>
+          <div layout="row" layout-align="start space-around" ng-cloak>
 
-          <md-input-container>
-            <label>Origem</label>
-            <md-select placeholder="Origem" ng-model="ctrl.call.origin" md-on-open="ctrl.loadUsers()">
-              <md-option ng-value="user" ng-repeat="user in ctrl.users">{{user.name}}</md-option>
-            </md-select>
-          </md-input-container>
+            <md-input-container>
+              <label>Origem</label>
+              <md-select required placeholder="Origem" ng-model="ctrl.call.origin" md-on-open="ctrl.getOrigins()">
+                <md-option ng-value="item" ng-repeat="item in ctrl.origins">{{item.origin}}</md-option>
+              </md-select>
+            </md-input-container>
 
-          <md-input-container>
-            <label>Destino</label>
-            <md-select placeholder="Destino" ng-model="ctrl.call.destiny" md-on-open="ctrl.loadUsers()">
-              <md-option ng-value="user" ng-repeat="user in ctrl.users">{{user.name}}</md-option>
-            </md-select>
-          </md-input-container>
+            <md-input-container>
+              <label>Destino</label>
+              <md-select required ng-disabled="!ctrl.call.origin" placeholder="Destino" ng-model="ctrl.call.destination">
+                <md-option ng-value="item" ng-repeat="item in ctrl.call.origin.destinations">{{item.destination}}</md-option>
+              </md-select>
+            </md-input-container>
 
-          <md-input-container class="md-block" flex-gt-sm="25" flex-xs="50" md-no-asterisk>
-            <label>Minutos</label>
-            <input ng-model="ctrl.call.minutes" type="number" min=1 required md-no-asterisk>
-          </md-input-container>
+            <md-input-container class="md-block" flex-gt-sm="25" flex-xs="50" md-no-asterisk>
+              <label>Minutos</label>
+              <input required ng-model="ctrl.call.minutes" type="number" min=1 required md-no-asterisk>
+            </md-input-container>
 
-          <md-input-container>
-            <label>Plano</label>
-            <md-select placeholder="Plano" ng-model="ctrl.call.plan" md-on-open="ctrl.loadUsers()">
-              <md-option ng-value="user" ng-repeat="user in ctrl.users">{{user.name}}</md-option>
-            </md-select>
-          </md-input-container>
+            <md-input-container>
+              <label>Plano</label>
+              <md-select required placeholder="Plano" ng-model="ctrl.call.plan" md-on-open="ctrl.getPlans()">
+                <md-option ng-value="item" ng-repeat="item in ctrl.plans">{{item.name}}</md-option>
+              </md-select>
+            </md-input-container>
 
-        </div>
+            <md-button ng-disabled="Form.$invalid" ng-click="ctrl.calculate(ctrl.call)" class="md-fab" aria-label="Calculate">
+              <md-icon>arrow_forward</md-icon>
+            </md-button>
 
+          </div>
+
+        </form>
       </md-card-content>
     </md-card>
 
     <!-- Results -->
-    <md-card flex-gt-sm="50" flex>
+    <md-card flex="50" flex-xs="100">
 
       <md-card-title>
         <md-card-title-text>
@@ -61,14 +67,21 @@
 
         <md-content>
           <md-list flex>
-            <md-list-item class="md-3-line" ng-repeat="item in ctrl.plans" ng-click="null">
+
+            <md-list-item ng-if="!ctrl.results.length" class="md-2-line" ng-click="null">
+              <div class="md-list-item-text" layout="column">
+                <h3>Nenhum</h3>
+              </div>
+            </md-list-item>
+
+            <md-list-item class="md-3-line" ng-repeat="item in ctrl.results track by $index" ng-click="null">
               <div class="md-list-item-text" layout="column">
                 <h3>{{ item.name }}</h3>
                 <h4>{{ item.name }}</h4>
                 <p>{{ item.name }}</p>
               </div>
+              <md-divider></md-divider>
             </md-list-item>
-            <md-divider></md-divider>
 
           </md-list>
         </md-content>
