--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -76,9 +76,10 @@
 
             <md-list-item class="md-3-line" ng-repeat="item in ctrl.results track by $index" ng-click="null">
               <div class="md-list-item-text" layout="column">
-                <h3>{{ item.name }}</h3>
-                <h4>{{ item.name }}</h4>
-                <p>{{ item.name }}</p>
+                <h3>{{item.minutes}} Minutos de ligação de {{ ::item.origin }} para {{ ::item.destination }}</h3>
+                <h4><strong>No plano {{ ::item.plan }}: {{ ::item.planValue | currency: "R$: " : fractionSize }}</strong></h4>
+                <h4>Sem plano: {{ ::item.noPlanValue | currency: "R$: " : fractionSize }}</h4>
+                <p>{{ ::item.name }}</p>
               </div>
               <md-divider></md-divider>
             </md-list-item>
